# katas

./: .gitignore  LICENSE.txt
poker_hand/: KataPokerHands.html
poker_hand/c++/: README.md
poker_hand/c++/poker/: .ycm_extra_conf.py  CMakeLists.txt  Makefile
poker_hand/c++/poker/src/: CMakeLists.txt
poker_hand/c++/poker/src/poker/: CMakeLists.txt  card.cpp  hand.cpp  poker.cpp  poker.h  rank.cpp  ranking.cpp  ranking.h  score.cpp
poker_hand/c++/poker/tests/: CMakeLists.txt  card_tests.cpp  hand_tests.cpp  rank_tests.cpp  ranking_tests.cpp  score_tests.cpp
poker_hand/elixir/poker/: Makefile  README.md  mix.exs
poker_hand/elixir/poker/lib/: poker.ex
poker_hand/elixir/poker/lib/Card/: card.ex
poker_hand/elixir/poker/lib/Parse/: parse.ex
poker_hand/elixir/poker/lib/ranking/: ranking.ex
poker_hand/elixir/poker/test/: poker_test.exs
